updated latest code

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+      <meta-data
+        android:name="messaging_android_notification_delegation_enabled"
+        android:value="true" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
