--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,3 +4,8 @@ extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autoli
 rootProject.name = 'TheSmartMediseva'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+
+include(":EnxRtcAndroid")
+project(":EnxRtcAndroid").projectDir = file('../node_modules/enx-rtc-react-native/android/EnxRtcAndroid')
+include(":LibWebRtc")
+project(":LibWebRtc").projectDir = file('../node_modules/enx-rtc-react-native/android/LibWebRtc')
