--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/auth": "^22.2.0",
     "@react-native-firebase/firestore": "^22.2.0",
+    "@react-native-firebase/messaging": "^22.2.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/material-top-tabs": "^7.2.13",
     "@react-navigation/native": "^7.1.9",
@@ -34,6 +35,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-get-location": "^5.0.0",
+    "enx-rtc-react-native": "2.3.48",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
