--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.9.0",
+    "enx-rtc-react-native": "2.3.48",
     "google-libphonenumber": "^3.2.40",
     "i18next": "^25.1.3",
     "moment": "^2.30.1",
@@ -32,14 +33,14 @@
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-geocoding": "^0.5.0",
-    "react-native-geolocation-service": "^5.3.1", 
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-get-location": "^5.0.0",
-    "enx-rtc-react-native": "2.3.48",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localization": "^2.3.2",
+    "react-native-maps": "^1.24.10",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-otp-entry": "^1.8.4",
     "react-native-pager-view": "^6.7.1",
