--- a/ios/TheSmartMediseva/Info.plist
+++ b/ios/TheSmartMediseva/Info.plist
@@ -33,6 +33,10 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera access is required for video calling.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Microphone access is required for audio in calls.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
