--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "agora-react-native-rtm": "^2.2.6",
+    "agora-rn-uikit": "^5.0.2",
+    "agora-rtc-sdk-ng": "^4.24.0",
     "axios": "^1.9.0",
-    "enx-rtc-react-native": "2.3.48",
+    "enx-rtc-react-native": "^2.3.48",
     "google-libphonenumber": "^3.2.40",
     "i18next": "^25.1.3",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-agora": "^4.5.3",
     "react-native-base64": "^0.2.1",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-file-viewer": "^2.1.5",
