--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,8 +16,6 @@
  <uses-permission android:name="android.permission.VIBRATE" />
  <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-
-
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -42,15 +40,33 @@
         </intent-filter>
       </activity>
        <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyDpTsiLmk-PYR3qTOLdwPqiJuE1ierFol8"
-      />
-        <meta-data
-    android:name="com.google.firebase.messaging.default_notification_icon"
-    android:resource="@drawable/notification_icon" />
-  <meta-data
-    android:name="com.google.firebase.messaging.default_notification_color"
-    android:resource="@color/notification_color" />
+         android:name="com.google.android.geo.API_KEY"
+         android:value="AIzaSyBDjcN-PT5q9HQV2U0T5vOVHqMFwWdoibs"
+       />
+       <meta-data
+         android:name="com.google.firebase.messaging.default_notification_icon"
+         android:resource="@drawable/notification_icon" />
+       <meta-data
+         android:name="com.google.firebase.messaging.default_notification_color"
+         android:resource="@color/notification_color"
+         xmlns:tools="http://schemas.android.com/tools"
+         tools:replace="android:resource" />
+
+       <!-- Notification channels for different types of notifications -->
+       <meta-data
+         android:name="com.google.firebase.messaging.default_notification_channel_id"
+         android:value="general_notifications"
+         xmlns:tools="http://schemas.android.com/tools"
+         tools:replace="android:value" />
+
+       <!-- Service for handling incoming call notifications -->
+       <service
+         android:name=".CallNotificationService"
+         android:exported="false">
+         <intent-filter>
+           <action android:name="com.google.firebase.MESSAGING_EVENT" />
+         </intent-filter>
+       </service>
       
     </application>
 </manifest>
