--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.CAMERA" />
@@ -15,7 +14,6 @@
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
  <uses-permission android:name="android.permission.VIBRATE" />
  <uses-permission android:name="android.permission.WAKE_LOCK" />
-
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -67,6 +65,14 @@
            <action android:name="com.google.firebase.MESSAGING_EVENT" />
          </intent-filter>
        </service>
-      
+
+       <!-- Firebase Messaging Service -->
+       <service
+         android:name=".MyFirebaseMessagingService"
+         android:exported="false">
+         <intent-filter>
+           <action android:name="com.google.firebase.MESSAGING_EVENT" />
+         </intent-filter>
+       </service>
     </application>
 </manifest>
